--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -1,21 +1,14 @@
 {
-  "name": "alx-backend-javascript",
-  "version": "1.0.0",
-  "description": "ALX Backend JavaScript Projects",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha",
-    "test:jest": "jest"
-  },
-  "engines": {
-    "node": "12.x"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^6.2.2",
-    "sinon": "^7.5.0",
-    "jest": "^26.6.3",
-    "express": "^4.17.1",
-    "request": "^2.88.0"
-  }
+"name": "task_0",
+"version": "1.0.0",
+"description": "",
+"main": "index.js",
+"scripts": {
+  "test": "mocha"
+},
+"author": "",
+"license": "ISC",
+"devDependencies": {
+  "mocha": "^8.0.0"
+}
 }
