--- a/0x06-unittests_in_js/10-api/package.json
+++ b/0x06-unittests_in_js/10-api/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "8-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "./node_modules/mocha/bin/mocha"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^6.2.2",
-    "request": "^2.88.0",
-    "sinon": "^7.5.0"
-  }
+"name": "10-api",
+"version": "1.0.0",
+"description": "",
+"main": "api.js",
+"scripts": {
+  "test": "mocha"
+},
+"author": "",
+"license": "ISC",
+"dependencies": {
+  "express": "^4.17.1"
+},
+"devDependencies": {
+  "mocha": "^8.0.0",
+  "supertest": "^6.0.0"
+}
 }
