--- a/0x06-unittests_in_js/10-api/package.json
+++ b/0x06-unittests_in_js/10-api/package.json
@@ -1,15 +1,20 @@
 {
-"name": "10-api",
-"version": "1.0.0",
-"main": "api.js",
-"scripts": {
-"test": "mocha"
-},
-"dependencies": {
-"express": "^4.17.1"
-},
-"devDependencies": {
-"mocha": "^8.0.0",
-"supertest": "^4.0.2"
-}
+  "name": "10-api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "api.js",
+  "scripts": {
+    "test": "mocha api.test.js",
+    "start": "node api.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2",
+    "request": "^2.88.0"
+  }
 }
